--- a/app/admin/css/index_.css
+++ b/app/admin/css/index_.css
@@ -480,6 +480,10 @@ iframe {
     /* Remove default outline */
 }
 
+.toggle-button{
+    font-size: 22px;
+    color: #555555;
+}
 
 /* Basic styling for the sidebar */
 .sidebar {
@@ -733,4 +737,36 @@ th {
 
 td {
     color: #555 !important;
+}
+
+#loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.spinner {
+    border: 8px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #ff8c0a;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+to {
+    transform: rotate(360deg);
+}
+}
+
+.hidden {
+    display: none;
 }
