--- a/app/css/index_.css
+++ b/app/css/index_.css
@@ -11,7 +11,7 @@ body {
     overflow: hidden;
     background-color: #fafafafa;
     /* box-shadow: 0px 3px 4px 0px #d9d9d9; */
-    padding: 5px 10px;
+    padding: 0px 10px;
     position: fixed;
     /* ทำให้ header อยู่ติดด้านบน */
     top: 0;
@@ -31,7 +31,7 @@ body {
     text-decoration: none;
     font-size: 14px;
     line-height: 25px;
-    border-radius: 4px;
+    /* border-radius: 4px; */
 }
 
 .header-top a:hover {
@@ -406,7 +406,7 @@ body {
 } */
 
 .language-select {
-    width: 120px;
+    width: 90px;
     padding: 5px;
     font-size: 16px;
     border: none;
