--- a/app/css/index_.css
+++ b/app/css/index_.css
@@ -455,7 +455,7 @@ body {
     left: 0;
     top: 50%;
     transform: translateY(-50%);
-    background-color: #f46e20;
+    background-color: #f28b1f;
     color: white;
     padding: 15px 40px 20px 10px;
     font-weight: bold;
