--- a/app/css/index_.css
+++ b/app/css/index_.css
@@ -148,8 +148,8 @@ body {
 }
 
 .box-section {
-    margin: 10px;
-    border-bottom: 1px solid #e0e0e0;
+    margin: 20px 0px;
+    border-bottom: 1px solid #f1f1f1;
 }
 
 .box-content {
@@ -161,8 +161,8 @@ body {
 }
 
 .box-content img {
-    width: 100%;
-    height: auto;
+    /* width: 100%; */
+    /* height: auto; */
     /* border-radius: 8px; */
     /* transition: transform 0.3s ease; */
 }
@@ -537,228 +537,119 @@ body {
     } */
 }
 
-
-/******* Middle section CSS Start ******/
-/* -------- Landing page ------- */
-.game-section {
-    /* padding: 60px 50px; */
+#newsMarquee-link {
+    padding: 8px 0px 0px 0px;
+    font-size: 18px;
 }
 
-.game-section .owl-stage {
-    margin: 15px 0;
-    display: flex;
-    display: -webkit-flex;
+#newsMarquee-link a {
+    text-decoration: none !important;
+    color: #f05323;
 }
 
-.game-section .item {
-    margin: 0 15px 60px;
-    width: 320px;
-    height: 280px;
-    display: flex;
-    display: -webkit-flex;
-    align-items: flex-end;
-    -webkit-align-items: flex-end;
-    background: #343434 no-repeat center center / cover;
-    border-radius: 6px;
-    overflow: hidden;
-    position: relative;
-    transition: all 0.4s ease-in-out;
-    -webkit-transition: all 0.4s ease-in-out;
-    cursor: pointer;
+#newsMarquee-link a:hover {
+    text-decoration: underline !important;
+    color: #f28b1f;
 }
 
-.game-section .item.active {
-    width: 500px;
-    box-shadow: 12px 40px 40px rgba(0, 0, 0, 0.25);
-    -webkit-box-shadow: 12px 40px 40px rgba(0, 0, 0, 0.25);
-}
-
-.game-section .item:after {
-    content: "";
-    display: block;
+.caption-top {
+    text-align: center;
+    font-size: 14px;
     position: absolute;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
-}
-
-.game-section .item-desc {
-    padding: 0 24px 12px;
-    color: #fff;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    transform: translateY(calc(100% - 54px));
-    -webkit-transform: translateY(calc(100% - 54px));
-    transition: all 0.4s ease-in-out;
-    -webkit-transition: all 0.4s ease-in-out;
-}
-
-.game-section .item.active .item-desc {
-    transform: none;
-    -webkit-transform: none;
-}
-
-.game-section .item-desc p {
-    opacity: 0;
-    -webkit-transform: translateY(32px);
-    transform: translateY(32px);
-    transition: all 0.4s ease-in-out 0.2s;
-    -webkit-transition: all 0.4s ease-in-out 0.2s;
-}
-
-.game-section .item.active .item-desc p {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-}
-
-.game-section .owl-theme.custom-carousel .owl-dots {
-    margin-top: -20px;
-    position: relative;
-    z-index: 5;
-}
-
-/******** Middle section CSS End *******/
-
-/***** responsive css Start ******/
-
-@media (min-width: 992px) and (max-width: 1199px) {
-    /* h2 {
-      margin-bottom: 32px;
-    }
-    h3 {
-      margin: 0 0 8px;
-      font-size: 24px;
-      line-height: 32px;
-    } */
-
-    /* -------- Landing page ------- */
-    .game-section {
-        /* padding: 50px 30px; */
-    }
-
-    .game-section .item {
-        margin: 0 12px 60px;
-        width: 260px;
-        height: 260px;
-    }
-
-    .game-section .item.active {
-        width: 400px;
-    }
-
-    .game-section .item-desc {
-        transform: translateY(calc(100% - 46px));
-        -webkit-transform: translateY(calc(100% - 46px));
-    }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-    /* h2 {
-      margin-bottom: 32px;
-    }
-    h3 {
-      margin: 0 0 8px;
-      font-size: 24px;
-      line-height: 32px;
-    } */
-
-    /* -------- Landing page ------- */
-    .game-section {
-        /* padding: 50px 30px 40px; */
-    }
-
-    .game-section .item {
-        margin: 0 12px 60px;
-        width: 240px;
-        height: 230px;
-    }
-
-    .game-section .item.active {
-        width: 360px;
-    }
-
-    .game-section .item-desc {
-        transform: translateY(calc(100% - 42px));
-        -webkit-transform: translateY(calc(100% - 42px));
-    }
-}
-
-@media (max-width: 767px) {
-
-    /* -------- Landing page ------- */
-    .game-section {
-        /* padding: 30px 15px 20px; */
-    }
-
-    .game-section .item {
-        margin: 0 10px 40px;
-        width: 200px;
-        height: 280px;
-    }
-
-    .game-section .item.active {
-        width: 270px;
-        box-shadow: 6px 10px 10px rgba(0, 0, 0, 0.25);
-        -webkit-box-shadow: 6px 10px 10px rgba(0, 0, 0, 0.25);
-    }
-
-    .game-section .item-desc {
-        padding: 0 14px 5px;
-        transform: translateY(calc(100% - 42px));
-        -webkit-transform: translateY(calc(100% - 42px));
-    }
-}
-
-.owl-theme .owl-dots .owl-dot.active span,
-.owl-theme .owl-dots .owl-dot:hover span {
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-/******** Middle section CSS End *******/
-
-
-.b-0 {
     bottom: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* color: white; */
+    padding: 5px;
+    z-index: 1;
 }
 
-.bg-shadow {
-    background: linear-gradient(to bottom, rgba(179, 171, 171, 0) 0%, rgba(48, 48, 48, 0.71) 49%, rgba(19, 19, 19, 0.8) 100%);
+.caption-top a {
+    text-decoration: none !important;
+    color: #9c9c9c;
+}
+
+.caption-top a:hover {
+    text-decoration: none !important;
+    font-size: 18px;
+    color: #fafafa;
+}
+
+.image-wrapper {
+    position: relative;
 }
 
 .overflow {
     position: relative;
     overflow: hidden;
+    border-radius: 6px;
 }
 
 .zoom img {
     transition: all 0.2s linear;
     border-radius: 6px;
-    /* Add border-radius to the image */
 }
 
 .zoom:hover img {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
-    border-radius: 6px;
-}
-
-.card {
-    border-radius: 6px;
-    /* Add border-radius to the card */
-    border: none;
-}
-
-.image-wrapper {
-    border-radius: 6px;
 }
 
 .image-wrapper img {
-    border-radius: 6px;
+    width: 100%;
 }
+
+.line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+/* .owl-carousel .item {
+    color: #fff;
+    border-radius: 5px;
+    text-align: center;
+} */
+
+.custom-card {
+    /* width: 300px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin: 10px;
+    background-color: #fff; */
+}
+
+.custom-card-header {
+    /* background-color: #f4f4f4;
+    padding: 15px;
+    text-align: center;
+    font-weight: bold; */
+}
+
+.custom-card-img img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.custom-card-body {
+    /* padding: 15px; */
+}
+
+.custom-card-title {
+    /* font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px; */
+}
+
+.custom-card-text {
+    /* font-size: 14px;
+    color: #555; */
+}
+
 
 
 .banner-section {
@@ -841,17 +732,25 @@ body {
 
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
     z-index: 9999;
-    padding-top: 70px; /* Location of the box */
+    padding-top: 70px;
+    /* Location of the box */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
 }
 
 /* Modal Content */
@@ -862,7 +761,7 @@ body {
     padding: 0;
     border: 1px solid #888;
     width: 60%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
@@ -871,19 +770,32 @@ body {
 
 /* Add Animation */
 @-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0} 
-    to {top:0; opacity:1}
+    from {
+        top: -300px;
+        opacity: 0
+    }
+
+    to {
+        top: 0;
+        opacity: 1
+    }
 }
 
 @keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
+    from {
+        top: -300px;
+        opacity: 0
+    }
+
+    to {
+        top: 0;
+        opacity: 1
+    }
 }
 
 /* The Close Button */
 .modal-close,
-.modal-close-channel
-{
+.modal-close-channel {
     color: #555;
     float: right;
     font-size: 28px;
@@ -894,16 +806,14 @@ body {
 .modal-close:hover,
 .modal-close:focus,
 .modal-close-channel:hover,
-.modal-close-channel:focus
-{
+.modal-close-channel:focus {
     color: #e91e63;
     text-decoration: none;
     cursor: pointer;
 }
 
 .close-compare:hover,
-.close-compare:focus
-{
+.close-compare:focus {
     color: #e91e63;
     text-decoration: none;
     cursor: pointer;
@@ -918,18 +828,20 @@ body {
     justify-content: space-between;
 }
 
-.modal-body {padding: 2px 16px;}
+.modal-body {
+    padding: 2px 16px;
+}
 
-.modal-body > div{
+.modal-body>div {
     margin: 10px;
 }
 
-.modal-body > div a{
+.modal-body>div a {
     text-decoration: none;
     color: #555;
 }
 
-.modal-body > div a:hover{
+.modal-body>div a:hover {
     color: #ff9800;
 }
 
@@ -940,7 +852,7 @@ body {
 }
 
 
-.emet-login{
+.emet-login {
     width: 100%;
     border: 1px solid #e2e1e1;
     padding: 8px 20px;
@@ -965,10 +877,10 @@ body {
     }
 
     .header-top-right {
-        float: none;
+        float: right;
     }
 
-    .header-link{
+    .header-link {
         display: flex;
     }
 
