--- a/app/css/index_.css
+++ b/app/css/index_.css
@@ -558,10 +558,10 @@ body {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    /* color: white; */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0));
     padding: 5px;
     z-index: 1;
+    box-sizing: border-box;  /* Ensure padding is included in the width */
 }
 
 .caption-top a {
@@ -577,26 +577,35 @@ body {
 
 .image-wrapper {
     position: relative;
+    width: 100%;  /* Ensure it takes full width of its parent */
+    height: 100%; /* Ensure it stretches to full height */
 }
 
 .overflow {
     position: relative;
     overflow: hidden;
     border-radius: 6px;
+    height: 100%; /* Ensure it stretches to full height */
 }
 
-.zoom img {
+.zoom img,
+.zoom iframe {
     transition: all 0.2s linear;
     border-radius: 6px;
+    width: 100%; 
+    height: 100%; /* Fill the height */
+    object-fit: cover; /* This will ensure the aspect ratio is maintained */
 }
 
-.zoom:hover img {
-    -webkit-transform: scale(1.1);
+.zoom:hover img,
+.zoom:hover iframe {
     transform: scale(1.1);
 }
 
-.image-wrapper img {
+.image-wrapper img,
+.image-wrapper iframe {
     width: 100%;
+    height: 100%;  /* Ensure the image/iframe fills the space */
 }
 
 .line-clamp {
@@ -604,7 +613,9 @@ body {
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    white-space: normal;  /* Allow text wrapping */
 }
+
 
 /* .owl-carousel .item {
     color: #fff;
