--- a/app/css/news_.css
+++ b/app/css/news_.css
@@ -18,17 +18,18 @@
 
 
 .box-image {
-    flex: 1;  /* ให้ .box-image ขยายเต็มพื้นที่ของ .box-news */
-    width: 100%;  /* ทำให้ขยายเต็มความกว้างของ box-news */
-    height: 100%; /* ทำให้ขยายเต็มความสูงของ box-news */
+    flex: 1; 
+    width: 100%;
+    height: 100%;
     min-height: 250px;
+    max-height: 250px;
     overflow: hidden;
 }
 
 .box-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;  /* ให้ภาพขยายเต็มพื้นที่โดยไม่ทำให้บิดเบี้ยว */
+    object-fit: cover;
     transition: transform 0.3s ease;
 }
 
