--- a/app/css/index_.css
+++ b/app/css/index_.css
@@ -806,7 +806,8 @@ body {
 
 /* The Close Button */
 .modal-close,
-.modal-close-sign-in
+.modal-close-sign-in,
+.modal-close-forgot-password
  {
     color: #555;
     float: right;
@@ -818,7 +819,9 @@ body {
 .modal-close:hover,
 .modal-close:focus,
 .modal-close-sign-in:hover,
-.modal-close-sign-in:focus
+.modal-close-sign-in:focus,
+.modal-close-forgot-password:hover,
+.modal-close-forgot-password:focus
 {
     color: #e91e63;
     text-decoration: none;
@@ -912,6 +915,40 @@ body {
     border-left: 5px solid #f46e20;
     padding-left: 10px;
 }
+
+
+#loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.spinner {
+    border: 8px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #ff8c0a;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+to {
+    transform: rotate(360deg);
+}
+}
+
+.hidden {
+    display: none;
+}
+
 
 /* For medium-sized smartphones */
 @media screen and (max-width: 768px) {
