--- a/app/admin/css/index_.css
+++ b/app/admin/css/index_.css
@@ -81,7 +81,8 @@ body {
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    white-space: normal;  /* Allow text wrapping */
+    white-space: normal;
+    /* Allow text wrapping */
 }
 
 
@@ -488,7 +489,7 @@ iframe {
     /* Remove default outline */
 }
 
-.toggle-button{
+.toggle-button {
     font-size: 22px;
     color: #555555;
 }
@@ -770,13 +771,74 @@ td {
 }
 
 @keyframes spin {
-to {
-    transform: rotate(360deg);
-}
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .hidden {
     display: none;
+}
+
+/* Class for styling the table */
+.table-styled {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Class for table headers */
+.table-styled th {
+    padding: 10px;
+    background-color: #FFC107;
+    color: white;
+    text-align: left;
+    font-size: 16px;
+}
+
+/* Class for table cells */
+.table-styled td {
+    padding: 12px 15px;
+    text-align: left;
+    font-size: 14px;
+    color: #333;
+}
+
+/* Zebra-striping for table rows */
+/* .table-styled tr:nth-child(even) {
+    background-color: #f2f2f2;
+} */
+
+/* Hover effect on rows */
+.table-styled tr:hover {
+    background-color: #f2f2f2;
+    cursor: pointer;
+}
+
+/* Border styling */
+.table-styled,
+.table-styled th,
+.table-styled td {
+    border: 1px solid #ddd;
+}
+
+/* Rounded corners for the table */
+.table-styled {
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+/* Make the table responsive */
+@media screen and (max-width: 768px) {
+    .table-styled {
+        font-size: 12px;
+    }
+
+    .table-styled th,
+    .table-styled td {
+        padding: 8px;
+    }
 }
 
 
