--- a/app/admin/css/index_.css
+++ b/app/admin/css/index_.css
@@ -780,7 +780,7 @@ td {
     display: none;
 }
 
-/* Class for styling the table */
+/* 
 .table-styled {
     width: 100%;
     border-collapse: collapse;
@@ -788,7 +788,7 @@ td {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Class for table headers */
+
 .table-styled th {
     padding: 10px;
     background-color: #FFC107;
@@ -797,7 +797,7 @@ td {
     font-size: 16px;
 }
 
-/* Class for table cells */
+
 .table-styled td {
     padding: 12px 15px;
     text-align: left;
@@ -805,31 +805,25 @@ td {
     color: #333;
 }
 
-/* Zebra-striping for table rows */
-/* .table-styled tr:nth-child(even) {
-    background-color: #f2f2f2;
-} */
 
-/* Hover effect on rows */
 .table-styled tr:hover {
     background-color: #f2f2f2;
     cursor: pointer;
 }
 
-/* Border styling */
+
 .table-styled,
 .table-styled th,
 .table-styled td {
     border: 1px solid #ddd;
 }
 
-/* Rounded corners for the table */
+
 .table-styled {
     border-radius: 8px;
     overflow: hidden;
 }
 
-/* Make the table responsive */
 @media screen and (max-width: 768px) {
     .table-styled {
         font-size: 12px;
@@ -839,7 +833,7 @@ td {
     .table-styled td {
         padding: 8px;
     }
-}
+} */
 
 
 .tables-over {
@@ -860,3 +854,44 @@ td {
 .tables-over::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
+
+.line-ref {
+    border-left: 5px solid #f46e20;
+    padding-left: 10px;
+}
+
+
+
+/* .table-custom {
+    width: 100%;
+    border-collapse: collapse;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+
+.table-custom th, .table-custom td {
+    padding: 12px;
+    border: 1px solid #ddd;
+}
+
+.table-custom th {
+    font-weight: 600;
+}
+
+.table-custom td {
+    background-color: #ffffff;
+    color: #333;
+    font-size: 14px;
+
+}
+
+.table-custom tr:nth-child(even) {
+    background-color: #f7f7f7;
+}
+
+.table-custom tr:hover {
+    background-color: #f1f1f1;
+    cursor: pointer;
+}  */
