แก้ให้ปรับตามจอที่แตกต่างกันได้ครับ

--- a/app/css/index_.css
+++ b/app/css/index_.css
@@ -40,7 +40,7 @@ body {
 }
 
 .header-top img.logo {
-    width: 200px;
+    width: auto;
     height: auto;
     object-fit: contain; /* หรือใช้ 'cover' ตามลักษณะภาพ */
     display: block;
