ปรับ navbar menu ให้สวยขึ้น

--- a/app/css/index_.css
+++ b/app/css/index_.css
@@ -122,7 +122,7 @@ body {
     padding: 10px 20px;
     display: inline-block;
     text-decoration: none;
-    color: #58585a;
+    color: #ffffff;
     transition: color 0.3s;
 }
 
