--- a/app/css/index_.css
+++ b/app/css/index_.css
@@ -194,7 +194,7 @@ body {
     left: 0;
     top: 50%;
     transform: translateY(-50%);
-    background-color: #f28b1f;
+    background-color: #ff9900;
     color: white;
     padding: 15px 40px 20px 10px;
     font-weight: bold;
