--- a/newstore/css/template-e-store.css
+++ b/newstore/css/template-e-store.css
@@ -1235,7 +1235,7 @@ body.modal-open {
 }
 
 .store-card {
-  cursor: pointer;
+  /* cursor: pointer; */
   width: 100%;
   min-width: 250px;
   max-width: 250px;
