--- a/app/css/index_.css
+++ b/app/css/index_.css
@@ -91,14 +91,14 @@ body {
     font-size: 15px;
     color: #555;
     border: none;
-    border-radius: 4px;
-    background-color: #fafafa;
+     border-radius: 4px;
+   /* background-color: #fafafa;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     padding-left: 30px;
     transition: background-color 0.3s, border-color 0.3s;
-    box-sizing: border-box;
+    box-sizing: border-box; */
 }
 
 .language-select option {
