--- a/newstore/css/template-e-store.css
+++ b/newstore/css/template-e-store.css
@@ -2122,7 +2122,8 @@ body.modal-open {
 
   .store-card {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    height: auto;
     min-width: 285px;
     max-width: 285px;
     /* max-height: 400px; */
